<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/addConsultancy"
        android:title="@string/addAsesory"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add_white"
        app:showAsAction="always" />

    <item
        android:id="@+id/editConsultancy"
        android:title="@string/action_edit"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_exit_to_app_white"
        app:showAsAction="never"/>
</menu>
