<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/OverviewLayout">

    <include layout="@layout/toolbar"/>

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:weightSum="1">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:checked="true"
            android:text="Asesor"
            android:onClick="onCheckboxClicked"
            android:id="@+id/chb_asesor" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:padding="5dp"
            android:text="Alumno"
            android:onClick="onCheckboxClicked"
            android:id="@+id/chb_alumno" />

    </RadioGroup>

<EditText
        style="@style/GeneralEditText"
        android:layout_height="50dp"
        android:inputType="numberDecimal"
        android:hint="@string/username"
        android:id="@+id/et_signup_username" />

    <EditText
        style="@style/GeneralEditText"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:fontFamily="Sans-serif"
        android:id="@+id/et_signup_password" />

    <EditText
        style="@style/GeneralEditText"
        android:inputType="textPassword"
        android:hint="@string/conf_password"
        android:fontFamily="Sans-serif"
        android:id="@+id/et_signup_confpassword" />

    <TextView
        style="@style/MessageError"
        android:text="Password incorrect"
        android:id="@+id/tv_signup_message"/>

    <Button
        style="@style/GeneralButton"
        android:text="@string/register"
        android:id="@+id/btn_signup_register" />

</LinearLayout>