<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/OverviewLayout">

    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="Proporciona los siguientes datos"
        android:textSize="20sp"
        android:textColor="@color/appColor"
        android:id="@+id/tv_addsesor_resume"
        android:gravity="center" />

    <EditText
        style="@style/GeneralEditText.First"
        android:layout_height="50dp"
        android:inputType="textNoSuggestions|textCapWords"
        android:hint="@string/fullname"
        android:id="@+id/et_info_name" />

    <EditText
        style="@style/GeneralEditText"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:id="@+id/et_info_email" />

    <EditText
        style="@style/GeneralEditText"
        android:inputType="textNoSuggestions|textCapSentences"
        android:hint="@string/department"
        android:fontFamily="Sans-serif"
        android:id="@+id/et_info_department" />

    <TextView
        style="@style/MessageError"
        android:text="Mensaje de error"
        android:id="@+id/tv_info_message"/>

</LinearLayout>